--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pulbat-seoridan",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.16.0",
+    "pnpm": ">=10.18.3"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
