시세 카드 디자인 수정

--- a/components.json
+++ b/components.json
@@ -10,8 +10,8 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "/Users/ertr/Documents/pulbat-seoridan/components",
-    "utils": "/Users/ertr/Documents/pulbat-seoridan/lib/utils",
-    "ui": "/Users/ertr/Documents/pulbat-seoridan/components/ui"
+    "components": "@/components",
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui"
   }
 }
