--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "motion": "^12.26.2",
     "next": "15.5.7",
     "pg": "^8.13.1",
+    "pino-pretty": "^13.1.3",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
